--- a/~!.emacs.d/features/spell.org
+++ b/~!.emacs.d/features/spell.org
@@ -52,6 +52,6 @@ Since spellchecking can be slow in some buffers, this can be disabled with:
 ;;   :commands (flyspell-correct-ivy)
 ;;   :init
 ;;   (setq flyspell-correct-interface #'flyspell-correct-ivy))
-(provide 'feature-spelling)
+(provide 'feature-spell)
 #+end_src
 
