--- a/~!.emacs.d/init.org
+++ b/~!.emacs.d/init.org
@@ -42,26 +42,6 @@
 * Features
 
 #+begin_src emacs-lisp
-
-;; (defun activate! (&rest features)
-;;   (while features
-;;     (setq f (pop features))
-;;     (setq feature (intern-soft (concat "feature-" f)))
-;;     (message "load %s" feature)
-;;     (require feature)
-;;     ;; (require (intern (format "feature-%s" m)))
-;;     )
-;;   )
-
-;; (activate!
-;;  "spell"
-;;  "translate"
-;;  "ledger"
-;;  ;; "write"
-;;  "git"
-;;  "project"
-;;  "snippets")
-
 (require 'feature-spell)
 (require 'feature-translate)
 (require 'feature-ledger)
@@ -81,4 +61,28 @@
 (require 'feature-elm)
 (require 'feature-docker)
 #+end_src
+
+POC
+
+#+begin_src emacs-lisp :tangle no
+(defun activate! (&rest features)
+  (while features
+    (setq f (pop features))
+    (setq feature (intern-soft (concat "feature-" f)))
+    (message "load %s" feature)
+    (require feature)
+    ;; (require (intern (format "feature-%s" m)))
+    )
+  )
+
+(activate!
+ "spell"
+ "translate"
+ "ledger"
+ ;; "write"
+ "git"
+ "project"
+ "snippets")
+#+end_src
+
 
