--- a/~!.emacs.d/init.org
+++ b/~!.emacs.d/init.org
@@ -36,7 +36,6 @@
 #+begin_src emacs-lisp
 (load (concat user-emacs-directory ".lisp/bootstrap")
       nil 'nomessage)
-
 #+end_src
 
 * Features
@@ -66,6 +65,8 @@
 #+end_src
 
 * Load Everything for Interactive Emacs
+
+These will not happen if run emacs in =batch= mode.
 
 #+begin_src emacs-lisp
 (if x/interactive-mode
