move company and org to features

--- a/~!.emacs.d/core/bootstrap.org
+++ b/~!.emacs.d/core/bootstrap.org
@@ -182,9 +182,7 @@ Other defaults.
   (require 'core-editor)
   (require 'core-ui)
   (require 'core-navigation)
-  (require 'core-evil)
-  (require 'core-company)
-  (require 'core-org))
+  (require 'core-evil))
 #+end_src
 
 
