--- a/~!.emacs.d/init.org
+++ b/~!.emacs.d/init.org
@@ -43,6 +43,8 @@
 #+begin_src emacs-lisp
 (defun x/initialize-features ()
   "Load features for an interactive session."
+  (require 'feature-org)
+  (require 'feature-company)
   (require 'feature-spell)
   (require 'feature-translate)
   (require 'feature-ledger)
