--- a/~!.emacs.d/init.org
+++ b/~!.emacs.d/init.org
@@ -41,29 +41,37 @@
 * Features
 
 #+begin_src emacs-lisp
-(defun x/initialize-features ()
-  "Load features for an interactive session."
-  (require 'feature-org)
-  (require 'feature-company)
-  (require 'feature-spell)
-  (require 'feature-translate)
-  (require 'feature-ledger)
-  ;; (require 'feature-write)
-  (require 'feature-git)
-  (require 'feature-project)
-  (require 'feature-snippets)
-  (require 'feature-lsp)
-  (require 'feature-lisp)
-  (require 'feature-web)
-  (require 'feature-markdown)
-  (require 'feature-shell)
-  (require 'feature-rust)
-  (require 'feature-yaml)
-  (require 'feature-lua)
-  (require 'feature-swift)
-  (require 'feature-elm)
-  (require 'feature-docker))
+(defun enable! (&rest modules)
+  (while modules
+    (setq m (pop modules))
+    (condition-case e
+        (require m)
+      ((error debug)
+       (message "Failed to load feature '%s', because: %s" m e)))))
 
+(defun x/enable-features ()
+  "Load features for an interactive session."
+  (enable!
+   'feature-org
+   'feature-company
+   'feature-spell
+   'feature-translate
+   'feature-ledger
+   ;; 'feature-write
+   'feature-git
+   'feature-project
+   'feature-snippets
+   'feature-lsp
+   'feature-lisp
+   'feature-web
+   'feature-markdown
+   'feature-shell
+   'feature-rust
+   'feature-yaml
+   'feature-lua
+   'feature-swift
+   'feature-elm
+   'feature-docker))
 #+end_src
 
 * Load Everything for Interactive Emacs
@@ -74,7 +82,7 @@ These will not happen if run emacs in =batch= mode.
 (if x/interactive-mode
     (progn
       (x/initialize-core)
-      (x/initialize-features)))
+      (x/enable-features)))
 #+end_src
 
 POC
