better feature enabling

--- a/~!.emacs.d/core/bootstrap.org
+++ b/~!.emacs.d/core/bootstrap.org
@@ -5,6 +5,8 @@
 * Early Optimizations
 
 #+begin_src emacs-lisp
+(require 'cl-lib)
+
 (defvar doom-gc-cons-threshold 16777216 ; 16mb
   "The default value to use for `gc-cons-threshold'.
 If you experience freezing, decrease this. If you experience stuttering, increase this.")
@@ -185,4 +187,25 @@ Other defaults.
   (require 'core-evil))
 #+end_src
 
+* Enable Features
+
+#+begin_src emacs-lisp
+(defvar x-features '()
+  "A list of enabled features.")
+
+(defun x/enable-features ()
+  (message "features: %s" x-features)
+  (while x-features
+    (setq m (pop x-features))
+    (condition-case e
+        (require m)
+      ((error debug)
+       (message "Failed to load feature '%s', because: %s" m e)))))
+
+(defun enable! (&rest modules)
+  (setq
+   x-features
+   (cl-remove-duplicates
+    (append x-features modules))))
+#+end_src
 
