--- a/~!.emacs.d/features/lsp.org
+++ b/~!.emacs.d/features/lsp.org
@@ -2,23 +2,10 @@
 #+TITLE: LSP
 #+PROPERTY: header-args :tangle (concat x/lisp-dir "feature-lsp.el")
 
+* Key Bindings
+
 #+begin_src emacs-lisp
-(use-package lsp-mode
-  ;; :quelpa (lsp-mode :fetcher github :repo "emacs-lsp/lsp-mode")
-  :init
-  (setq
-   lsp-session-file (concat x/etc-dir "lsp-session")
-   lsp-auto-guess-root t
-   lsp-keep-workspace-alive nil
-   lsp-eldoc-render-all nil
-   lsp-inhibit-message t
-   lsp-message-project-root-warning t)
-  (add-hook 'kill-emacs-hook (setq lsp-restart 'ignore))
-
-  :config
-  (require 'lsp-clients)
-  (add-hook 'lsp-after-open-hook 'lsp-enable-imenu)
-
+(defun +lsp|keys ()
   (defhydra hydra-lsp (:exit t :hint nil)
     "
  Buffer^^               Server^^                   Symbol
@@ -44,9 +31,33 @@
     ("S" lsp-shutdown-workspace))
 
   (map!
-    "l" '(hydra-lsp/body :which-key "LSP"))
-  )
+    "l" '(hydra-lsp/body :which-key "LSP")))
+#+end_src
 
+* Init lsp-mode
+
+#+begin_src emacs-lisp
+(use-package lsp-mode
+  ;; :quelpa (lsp-mode :fetcher github :repo "emacs-lsp/lsp-mode")
+  :init
+  (setq
+   lsp-session-file (concat x/etc-dir "lsp-session")
+   lsp-auto-guess-root t
+   lsp-keep-workspace-alive nil
+   lsp-eldoc-render-all nil
+   lsp-inhibit-message t
+   lsp-message-project-root-warning t)
+  (add-hook 'kill-emacs-hook (setq lsp-restart 'ignore))
+
+  :config
+  (require 'lsp-clients)
+  (add-hook 'lsp-after-open-hook 'lsp-enable-imenu)
+  (+lsp|keys))
+#+end_src
+
+* lsp-ui
+
+#+begin_src emacs-lisp
 (use-package lsp-ui
   :after (lsp)
   :config
@@ -60,12 +71,20 @@
    lsp-ui-sideline-ignore-duplicate t)
   )
 
+#+end_src
+
+* company-lsp
+
+#+begin_src emacs-lisp
 (use-package company-lsp
   ;; :quelpa (company-lsp :fetcher github :repo "tigersoldier/company-lsp")
   :after lsp-mode
   :config
   (push 'company-lsp company-backends)
   (setq company-lsp-async t))
+#+end_src
 
+* Provide feature.
+#+begin_src emacs-lisp
 (provide 'feature-lsp)
 #+end_src
