--- a/~!.emacs.d/features/web.org
+++ b/~!.emacs.d/features/web.org
@@ -42,10 +42,13 @@ js2-mode
 
 rjsx-mode
 
+* React
+
 #+begin_src emacs-lisp
 (use-package rjsx-mode
   :mode "components/.+\\.js$"
   :init
+  (add-to-list 'auto-mode-alist '("\\.tsx?\\'" . rjsx-mode))
   (defun +javascript-jsx-file-p ()
     "Detect React or preact imports early in the file."
     (and buffer-file-name
@@ -85,10 +88,12 @@ rjsx-mode
 #+begin_src emacs-lisp
 (use-package typescript-mode
   :init
-  (add-to-list 'auto-mode-alist '("\\.tsx?\\'" . (lambda () (typescript-mode) (rjsx-minor-mode))))
+  ;; (add-to-list 'auto-mode-alist '("\\.tsx?\\'" . (lambda () (typescript-mode) (rjsx-minor-mode))))
   :config
   (add-hook 'js2-mode-hook #'rainbow-delimiters-mode)
   (add-hook 'typescript-mode-hook #'lsp)
+  ;; (set-electric! 'typescript-mode
+  ;;   :chars '(?\} ?\)) :words '("||" "&&"))
   )
 #+end_src
 
