--- a/~!.emacs.d/features/git.org
+++ b/~!.emacs.d/features/git.org
@@ -71,7 +71,9 @@
 (use-package forge
   :after magit
   :init
-  (setq forge-database-file (concat x/etc-dir "forge/forge-database.sqlite")))
+  (setq forge-database-file (concat x/etc-dir "forge/forge-database.sqlite"))
+  (setf epa-pinentry-mode 'loopback)
+  )
 
 (provide 'feature-git)
 #+end_src
