switch to tao theme

--- a/~!.emacs.d/features/project.org
+++ b/~!.emacs.d/features/project.org
@@ -118,7 +118,7 @@ Use `treemacs' command for old functionality."
 
     ;; The default width and height of the icons is 22 pixels. If you are
     ;; using a Hi-DPI display, uncomment this to double the icon size.
-    ;;(treemacs-resize-icons 44)
+    (treemacs-resize-icons 16)
 
     (treemacs-follow-mode t)
     (treemacs-filewatch-mode t)
