--- a/~!.emacs.d/core/ui.org
+++ b/~!.emacs.d/core/ui.org
@@ -27,17 +27,18 @@ If you want zenburn.
 #+end_src
 
 If you want tao.
-#+begin_src emacs-lisp :tangle no
+#+begin_src emacs-lisp
 (use-package tao-theme
-  :init
-  (load-theme 'tao-yin t))
+  :config
+  (load-theme 'tao-yang t)
+  )
 #+end_src
 
 doom-theme.
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :tangle no
 (use-package doom-themes
   :config
-  (load-theme 'doom-dracula t)
+  (load-theme 'doom-one-light t)
   ;; Enable custom neotree theme (all-the-icons must be installed!)
   ;;(doom-themes-neotree-config)
   ;; or for treemacs users
@@ -49,7 +50,7 @@ doom-theme.
 #+end_src
 
 solaire-mode.
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :tangle no
 (use-package solaire-mode
   :hook
   ((change-major-mode after-revert ediff-prepare-buffer) . turn-on-solaire-mode)
