--- a/~!.emacs.d/features/org.org
+++ b/~!.emacs.d/features/org.org
@@ -59,7 +59,6 @@ Yank link from clipboard and insert =more= org-mode link.
 #+end_src
 
 * UI
-
 #+begin_src emacs-lisp
 (defun +org|setup-ui ()
   (font-lock-add-keywords 'org-mode
@@ -81,16 +80,16 @@ Yank link from clipboard and insert =more= org-mode link.
      `(org-level-7 ((t (,@headline ,@variable-tuple))))
      `(org-level-6 ((t (,@headline ,@variable-tuple))))
      `(org-level-5 ((t (,@headline ,@variable-tuple))))
-     `(org-level-4 ((t (,@headline ,@variable-tuple :height 1.1))))
-     `(org-level-3 ((t (,@headline ,@variable-tuple :height 1.25))))
-     `(org-level-2 ((t (,@headline ,@variable-tuple :height 1.5))))
-     `(org-level-1 ((t (,@headline ,@variable-tuple :height 1.75))))
-     `(org-document-title ((t (,@headline ,@variable-tuple :height 2.0 :underline nil))))))
+     `(org-level-4 ((t (,@headline ,@variable-tuple :height 1))))
+     `(org-level-3 ((t (,@headline ,@variable-tuple :height 1.1))))
+     `(org-level-2 ((t (,@headline ,@variable-tuple :height 1.15))))
+     `(org-level-1 ((t (,@headline ,@variable-tuple :height 1.25))))
+     `(org-document-title ((t (,@headline ,@variable-tuple :height 1.5 :underline nil))))))
 
   (custom-theme-set-faces
    'user
-   '(variable-pitch ((t (:family "Source Sans Pro" :height 180 :weight light))))
-   '(fixed-pitch ((t ( :family "Inconsolata" :slant normal :weight normal :height 1.0 :width normal)))))
+   '(variable-pitch ((t (:family "Source Sans Pro" :height 150 :weight light))))
+   '(fixed-pitch ((t ( :family "Source Sans Pro" :slant normal :weight normal :height 1.0 :width normal)))))
 
   ;; (add-hook 'org-mode-hook 'variable-pitch-mode)
   (add-hook 'org-mode-hook 'visual-line-mode)
@@ -106,6 +105,7 @@ Yank link from clipboard and insert =more= org-mode link.
    '(org-special-keyword       ((t (:inherit (font-lock-comment-face fixed-pitch)))))
    '(org-tag                   ((t (:inherit (shadow fixed-pitch) :weight bold :height 0.8))))
    '(org-verbatim              ((t (:inherit (shadow fixed-pitch))))))
+
   )
 #+end_src
 
@@ -177,15 +177,15 @@ Yank link from clipboard and insert =more= org-mode link.
 
 * Babel
 #+begin_src emacs-lisp
-     (defun +org|setup-babel ()
-       (setq
-        org-plantuml-jar-path "/usr/local/Cellar/plantuml/1.2018.12/libexec/plantuml.jar"
-        org-confirm-babel-evaluate nil)
-       (org-babel-do-load-languages
-        'org-babel-load-languages
-        '((emacs-lisp . t)
-          (gnuplot . t)
-          (plantuml . t))))
+(defun +org|setup-babel ()
+  (setq
+   org-plantuml-jar-path "/usr/local/Cellar/plantuml/1.2018.12/libexec/plantuml.jar"
+   org-confirm-babel-evaluate nil)
+  (org-babel-do-load-languages
+   'org-babel-load-languages
+   '((emacs-lisp . t)
+     (gnuplot . t)
+     (plantuml . t))))
 #+end_src
 
 * the org package
@@ -238,6 +238,15 @@ Yank link from clipboard and insert =more= org-mode link.
                    (evil-org-set-key-theme)))
        (require 'evil-org-agenda)
        (evil-org-agenda-set-keys))
+#+end_src
+
+* mixed-pitch
+
+#+begin_src emacs-lisp
+(use-package mixed-pitch
+  :hook
+  ;; If you want it in all text modes:
+  (text-mode . mixed-pitch-mode))
 #+end_src
 
 * Slides
@@ -304,49 +313,47 @@ This is for attachment in org-mode.
 * DONE The Rest
 CLOSED: [2019-10-22 Tue 16:34]
 #+begin_src emacs-lisp
+(use-package org-tree-slide
+  :commands (org-tree-slide-mode)
+  :config
+  (org-tree-slide-simple-profile)
+  ;; (setq
+  ;;   org-tree-slide-activate-message " "
+  ;;   org-tree-slide-deactivate-message " "
+  ;;   org-tree-slide-modeline-display nil)
 
-     (use-package org-tree-slide
-       :commands (org-tree-slide-mode)
-       :config
-       (org-tree-slide-simple-profile)
-       ;; (setq
-       ;;   org-tree-slide-activate-message " "
-       ;;   org-tree-slide-deactivate-message " "
-       ;;   org-tree-slide-modeline-display nil)
+  (add-hook 'org-tree-slide-mode-hook #'evil-normalize-keymaps)
 
-       (add-hook 'org-tree-slide-mode-hook #'evil-normalize-keymaps)
+  (general-define-key
+   :states '(normal visual)
+   :keymaps 'org-tree-slide-mode-map
+   "q" 'org-tree-slide-mode
+   "<up>" 'org-tree-slide-content
+   "<down>" 'org-tree-slide-display-header-toggle
+   "<left>" 'org-tree-slide-move-previous-tree
+   "<right>" 'org-tree-slide-move-next-tree)
+  )
 
-       (general-define-key
-         :states '(normal visual)
-         :keymaps 'org-tree-slide-mode-map
-         "q" 'org-tree-slide-mode
-         "<up>" 'org-tree-slide-content
-         "<down>" 'org-tree-slide-display-header-toggle
-         "<left>" 'org-tree-slide-move-previous-tree
-         "<right>" 'org-tree-slide-move-next-tree)
-       )
+(use-package htmlize
+  :commands (htmlize-buffer
+             htmlize-file
+             htmlize-many-files
+             htmlize-many-files-dired
+             htmlize-region))
 
-     (use-package htmlize
-       :commands (htmlize-buffer
-                   htmlize-file
-                   htmlize-many-files
-                   htmlize-many-files-dired
-                   htmlize-region))
+(use-package plantuml-mode
+  :defer t
+  :mode ("\\.pum\\'" . plantuml-mode)
+  :config
+  (setq plantuml-jar-path org-plantuml-jar-path))
 
-     (use-package plantuml-mode
-       :defer t
-       :mode ("\\.pum\\'" . plantuml-mode)
-       :config
-       (setq plantuml-jar-path org-plantuml-jar-path))
+(use-package gnuplot
+  :defer t)
 
-     (use-package gnuplot
-       :defer t)
+(use-package ox-hugo
+  :after ox)
 
-     (use-package ox-hugo
-       :after ox)
-
-     (use-package org-web-tools)
-
+(use-package org-web-tools)
 #+end_src
 
 * deft
